# infra/APIContracts/src/main/resources/adverts-crud-openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.3
 
 info:
   title: Модуль приложения eBoard реализующий CRUD-операции для сущности Advert
@@ -97,6 +97,14 @@ components:
           type: object
           schema:
             $ref: 'users-crud-openapi.yaml#/components/schemas/UserDTO'
+        categories:
+          type: array
+          items:
+            $ref: 'category-crud-openapi.yaml#/components/schemas/CategoryDTO'
+        comments:
+          type: array
+          items:
+            $ref: 'comments-crud-openapi.yaml#/components/schemas/CommentDTO'
   securitySchemes:
     bearerAuth:
       type: http
